MSGCNTR-542 Redo Forum/Topic Permissions setting UI Applied patch
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@95126 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -323,10 +323,11 @@ cdfm_null_points= -
 cdfm_no_gb_perm=You do not have permission to view or grade the selected gradebook item for this student.
 
 #Permissions 
-perm_level= gets this permission level: 
+perm_level=Permission Level 
 perm_role=Role
 perm_role_label=This site role:
 perm_custom=which you can customize below:
+perm_customize=Customize
 perm_new_forum=New Forum
 perm_new_topic=New Topic
 perm_new_response=New Response
