MSGCNTR-531 - provide instruction when gradebook has no grade items
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/branches/MSGCNTR-528@95178 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -358,6 +358,8 @@ perm_delete_any=Delete Any
 perm_delete_own=Delete Own 
 perm_mark_as_read=Mark as Read
 perm_choose_assignment=Gradebook Item:
+perm_choose_assignment_none_f=You can associate a grade from the gradebook to this forum, but there are no existing gradebook items.
+perm_choose_assignment_none_t=You can associate a grade from the gradebook to this topic, but there are no existing gradebook items.
 perm_choose_instruction_forum=This will be the default in this forum's topics.
 perm_choose_instruction_topic=This will be the default when grading in this topic. 
 perm_choose_instruction_more_link=(More?)
