--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -358,13 +358,13 @@ perm_delete_any=Delete Any
 perm_delete_own=Delete Own 
 perm_mark_as_read=Mark as Read
 perm_choose_assignment=Gradebook Item:
-perm_choose_assignment_none_f=You can associate a grade from the gradebook to this forum, but there are no existing gradebook items.
-perm_choose_assignment_none_t=You can associate a grade from the gradebook to this topic, but there are no existing gradebook items.
+perm_choose_assignment_none_f=You can associate a grade from the Gradebook to this forum, but there are no existing Gradebook items.
+perm_choose_assignment_none_t=You can associate a grade from the Gradebook to this topic, but there are no existing Gradebook items.
 perm_choose_instruction_forum=This will be the default in this forum's topics.
 perm_choose_instruction_topic=This will be the default when grading in this topic. 
 perm_choose_instruction_more_link=(More?)
 perm_choose_instruction_forum_more=You can override this association in the child topics by changing it in the Topic settings.
-perm_choose_instruction_topic_more=You can assign any grade item from the gradebook to contributions in this topic. This is just setting the default.
+perm_choose_instruction_topic_more=You can assign any entry from the Gradebook to contributions in this topic. This is just setting the default.
 
 perm_own=Own
 perm_all=All
