--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -6,11 +6,11 @@ pvtarea_name=Messages Area
 cdfm_message_forums=Messages & Forums
 cdfm_message_pvtarea=Messages
 cdfm_container_title=Compose Message
-cdfm_container_title_thread = Post New Thread
-cdfm_flat_view = Display Entire Message
+cdfm_container_title_thread =Start a conversation **
+cdfm_flat_view = Display Message Content **
 cdfm_thread_view = Display Subject Only
-cdfm_reply_thread=Reply to Thread
-cdfm_tool_bar_message=Compose Forum Message
+cdfm_reply_thread=Reply to initial message **
+cdfm_tool_bar_message=Starting a conversation **
 cdfm_your_message=Your Message
 cdfm_required=Required items marked with 
 cdfm_title=Title
@@ -28,16 +28,16 @@ cdfm_button_bar_add_attachment_redirect=Add attachments
 cdfm_button_bar_add_attachment_more_redirect=Add more attachments
 cdfm_none=None
 cdfm_invalidMessageTitleString = Validation Error: Value is required.
-cdfm_button_bar_post_message=Post Message
+cdfm_button_bar_post_message=Post **
 cdfm_button_bar_save_draft=Save Draft
 cdfm_button_bar_cancel=Cancel
 cdfm_button_bar_revise=Edit
 cdfm_button_bar_delete=Delete
 cdfm_button_bar_add_groups_users=Add Individuals/Groups
 cdfm_button_bar_mark_as_read= Mark as Read
-cdfm_button_bar_reply_to_msg = Reply to Message
+cdfm_button_bar_reply_to_msg = Reply to this **
 cdfm_button_bar_reply_to_topic = Reply to Topic
-cdfm_button_bar_reply_to_thread = Reply to Thread
+cdfm_button_bar_reply_to_thread = Reply to initial message **
 cdfm_button_bar_delete_msg = Delete
 cdfm_button_bar_grade = Grade
 cdfm_button_bar_post_revised_msg = Post Edited Message
@@ -156,8 +156,8 @@ cdfm_printer_friendly=Printer Friendly Format
 cdfm_up_level_title=Go up one level
 cdfm_next_topic=Next Topic >
 cdfm_previous_topic=< Previous Topic
-cdfm_next_thread=Next Thread >
-cdfm_previous_thread=< Previous Thread
+cdfm_next_thread=Next Conversation > **
+cdfm_previous_thread=< Previous Conversation **
 cdfm_full_description=Full Description 
 cdfm_read_full_description=View Full Description
 cdfm_hide_full_description=Hide Full Description
@@ -195,7 +195,7 @@ cdfm_moderate_forum=Moderate Topics in Forum
 cdfm_moderate_forums=Moderate Topics in Forums
 cdfm_postFirst=Users must post before reading
 cdfm_postFirst_warning=You must post to this topic before you can view any messages
-cdfm_auto_mark_threads_read=Automatically Mark All Messages in a Thread as Read
+cdfm_auto_mark_threads_read=Automatically Mark All Messages in a Conversation as Read **
 cdfm_button_bar_save_setting=Save
 cdfm_button_bar_save_draft=Save Draft
 cdfm_button_bar_save_setting_add_topic=Save Settings & Add Topic
@@ -345,7 +345,7 @@ perm_new_topic=New Topic
 perm_new_response=New Response
 perm_response_to_response=Response to Response
 perm_move_postings=Move Postings
-perm_moderate_postings=Moderate Postings
+perm_moderate_postings=Moderate Messages **
 perm_change_settings=Change Settings
 perm_post_to_gradebook=Post to Gradebook
 perm_revise_postings=Edit Postings
@@ -389,7 +389,7 @@ msg_show_subject = Subject Only
 
 #messages organize options
 msg_organize = Organize
-msg_organize_thread = Thread
+msg_organize_thread = by Conversation **
 msg_organize_date_asc = Date Ascending
 msg_organize_date_desc = Date Descending
 msg_organize_unread = Unread
@@ -667,7 +667,7 @@ watch=Watch
 watch_forums_options=Watch Forums Options
 watch_forums_options_instruction=Use the settings below to change what notifications <strong><u>you</u></strong> receive when activity in the forums of <strong><u>this</u></strong> site take place.
 notify_for_all_postings=Notify me by email whenever a new message is posted
-notify_for_postings_to_my_thread=Notify me by email when a thread that I have contributed to receives a new message
+notify_for_postings_to_my_thread=Notify me by email when a conversation that I have contributed to receives a new message
 notify_none=No notification
 
 # email notification text
