MSGCNTR-531 - add header to frading settings control group
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/branches/MSGCNTR-528@95783 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -358,6 +358,7 @@ perm_revise_own=Edit Own
 perm_delete_any=Delete Any
 perm_delete_own=Delete Own 
 perm_mark_as_read=Mark as Read
+perm_choose_assignment_head=Grading
 perm_choose_assignment=Gradebook Item:
 perm_choose_assignment_none_f=You can associate a grade from the Gradebook to this forum, but there are no existing Gradebook items.
 perm_choose_assignment_none_t=You can associate a grade from the Gradebook to this topic, but there are no existing Gradebook items.
