MSGCNTR-528 - merging the branch into trunk
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@96126 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -112,6 +112,16 @@ cdfm_discussion_forums=Forums
 cdfm_discussion_forums_old=Discussion Forums
 cdfm_new_forum=New Forum
 cdfm_new_topic=New Topic
+cdfm_forum_inf_note=Note:   
+cdfm_forum_inf_no_topics= You need to add at least one topic.
+cdfm_forum_inf_all_topics_draft=All topics are draft. Topics saved as drafts cannot be seen by all participants.
+cdfm_forum_inf_no_forums=Participation cannot take place if there are no topics.  Only you or someone with your level of access can create topics.
+cdfm_forum_inf_init_guide=Use <strong>Forum Settings</strong> and <strong>Topic Settings</strong> to change the title and other details of this forum. <br />New forums and topics can only be created by you or someone with your level of access.<br />Use <strong>Template Settings</strong> to set up a template for all new forums.
+cdfm_forum_inf_all_forums_draft=All forums are draft. Forums saved as drafts cannot be seen by all participants.
+cdfm_forum_inf_no_topic_here=You need to add at least one topic for the forum above to be active.
+cdfm_forum_inf_no_topic_create=Create a topic?
+cdfm_forum_inf_no_forum_create=Create a forum?
+cdfm_forum_inf_no_forum_access=There may be forums that are not yet available for participation. Contact the site owner if you have questions about the status of a forum.
 cdfm_duplicate_topic=Duplicate Topic
 cdfm_duplicate_forum=Duplicate Forum
 cdfm_duplicate_topic_confirm=Are you sure you wish to duplicate this topic?
@@ -151,6 +161,7 @@ cdfm_previous_thread=< Previous Thread
 cdfm_full_description=Full Description 
 cdfm_read_full_description=View Full Description
 cdfm_hide_full_description=Hide Full Description
+cdfm_show_more_full_description=More?
 cdfm_read_full_rep_tomessage=View message you are replying to
 cdfm_hide_full_rep_tomessage=Hide message you are replying to
 
@@ -317,6 +328,8 @@ cdfm_add_comment = Add Comment to Denied Posting
 cdfm_add_comment_label = Add Comment:
 cdfm_insert_original_text_comment = Original Message:
 cdfm_reply_prefix=Re:
+cdfm_reply_message_note=Note: 
+cdfm_reply_message_mod_inst=contributions in this topic are moderated - only you and the moderator will be able to see your message until it is approved. If you are a moderator your post is automatically approved.
 
 cdfm_points_possible=({0} points possible)
 cdfm_null_points= - 
@@ -345,7 +358,14 @@ perm_revise_own=Edit Own
 perm_delete_any=Delete Any
 perm_delete_own=Delete Own 
 perm_mark_as_read=Mark as Read
-perm_choose_assignment=Gradebook Item: 
+perm_choose_assignment=Gradebook Item:
+perm_choose_assignment_none_f=You can associate a grade from the Gradebook to this forum, but there are no existing Gradebook items.
+perm_choose_assignment_none_t=You can associate a grade from the Gradebook to this topic, but there are no existing Gradebook items.
+perm_choose_instruction_forum=This will be the default in this forum's topics.
+perm_choose_instruction_topic=This will be the default when grading in this topic. 
+perm_choose_instruction_more_link=(More?)
+perm_choose_instruction_forum_more=You can override this association in the child topics by changing it in the Topic settings.
+perm_choose_instruction_topic_more=You can assign any entry from the Gradebook to contributions in this topic. This is just setting the default.
 
 perm_own=Own
 perm_all=All
@@ -646,6 +666,7 @@ cdfm_button_bar_permalink_message=Copy link for pasting into email
 # Watch forums options
 watch=Watch
 watch_forums_options=Watch Forums Options
+watch_forums_options_instruction=Use the settings below to change what notifications <strong><u>you</u></strong> receive when activity in the forums of <strong><u>this</u></strong> site take place.
 notify_for_all_postings=Notify me by email whenever a new message is posted
 notify_for_postings_to_my_thread=Notify me by email when a thread that I have contributed to receives a new message
 notify_none=No notification
