--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -145,6 +145,7 @@ cdfm_other_actions = Show/Hide Actions
 cdfm_display_options=Display Options
 cdfm_forum_settings=Forum Settings
 cdfm_topic_settings=Topic Settings
+cdfm__moremenulink=More
 cdfm_mark_check_as_read=Mark Read
 cdfm_mark_check_as_unread=Mark Unread
 cdfm_mark_check_as_delete=Delete
