MSGCNTR-549 Allow user to change name of forum/topic when duplicating (also fix i18n issue) Applied patch
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@96742 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -122,6 +122,8 @@ cdfm_forum_inf_no_topic_here=You need to add at least one topic for the forum ab
 cdfm_forum_inf_no_topic_create=Create a topic?
 cdfm_forum_inf_no_forum_create=Create a forum?
 cdfm_forum_inf_no_forum_access=There may be forums that are not yet available for participation. Contact the site owner if you have questions about the status of a forum.
+# {0} is the title of the forum or topic that is being duplicated
+cdfm_duplicate_copy_title= {0} Copy
 cdfm_duplicate_topic=Duplicate Topic
 cdfm_duplicate_forum=Duplicate Forum
 cdfm_duplicate_topic_confirm=Are you sure you wish to duplicate this topic?
