--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -699,4 +699,20 @@ statistics_table_topic=Forum statistics by topic
 statistics_table_topic_user=Statistics by user for
 statistics_table_user_authored= Created messages forum statistics by user 
 statistics_table_user_read= Read messages forum statistics by user
-summary_all_messages_topic = All messages in topic 
+summary_all_messages_topic = All messages in topic =======
+# CW-2786 add a text msg for A copy of this message will be sent to each recipient's email address.
+cc_all=A copy of this message will be sent to each recipient's email address.
+
+# CW-2778 
+move_thread=Move Thread(s)
+by_name= By Name:
+in_forum= In Forum:
+move_thread_info1= The following thread(s) will be moved from
+move_thread_info2= to the topic selected below.
+leave_reminder=Leave reminder about the move in the old topic
+filter_topics=Filter Topics
+topics=Topics
+showing=showing
+of=of
+move_button_text=Move Thread(s) to Selected Topic
+locked_topics_hidden=Locked topics will not show up as available options
