MSGCNTR-109 Display photo alongside name in Forums tool when viewing responses to thread
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@98271 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -167,6 +167,7 @@ cdfm_hide_full_description=Hide Full Description
 cdfm_show_more_full_description=More?
 cdfm_read_full_rep_tomessage=View message you are replying to
 cdfm_hide_full_rep_tomessage=Hide message you are replying to
+cdfm_profile_information=Profile Information
 
 cdfm_view=View 
 cdfm_hide=Hide 
