MSGCNTR-574 Error on use of ResourceLoader.getFormattedMessage at MembershipManagerImpl Applied patch
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@98437 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -696,8 +696,8 @@ javax.faces.validator.LengthValidator.MAXIMUM=Validation Error: Field has more c
 javax.faces.validator.LengthValidator.MINIMUM=Validation Error: Field does not have minimum number of allowable characters
 
 all_participants_desc=All Participants
-participants_group_desc=Group
-participants_role_desc=Role
+participants_group_desc={0} Group
+participants_role_desc={0} Role
 
 area_restricted_message=Template is in restricted availability mode
 forum_restricted_message=Forum is in restricted availability mode
