--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_ca.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_ca.properties
@@ -648,9 +648,9 @@ notify_none = Sense notificaci\u00F3
 
 openDate = Data d'inici
 
-participants_group_desc = Grup
+participants_group_desc = Grup {0}
 
-participants_role_desc = Rol
+participants_role_desc = Rol {0}
 
 perm_all = Tots
 
