MSGCNTR-538 - terminology changes
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@98507 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -6,11 +6,11 @@ pvtarea_name=Messages Area
 cdfm_message_forums=Messages & Forums
 cdfm_message_pvtarea=Messages
 cdfm_container_title=Compose Message
-cdfm_container_title_thread = Post New Thread
-cdfm_flat_view = Display Entire Message
+cdfm_container_title_thread = Start a New Conversation
+cdfm_flat_view = Display Message Content
+cdfm_reply_thread=Reply to Initial Message
 cdfm_thread_view = Display Subject Only
-cdfm_reply_thread=Reply to Thread
-cdfm_tool_bar_message=Compose Forum Message
+cdfm_tool_bar_message=Start a Conversation
 cdfm_your_message=Your Message
 cdfm_required=Required items marked with 
 cdfm_title=Title
@@ -22,22 +22,22 @@ cdfm_message_count_words=Words:
 cdfm_message_count_chars=Characters:
 cdfm_message_count_update: Update word count
 cdfm_attachments=Attachment(s):
-cdfm_no_attachments=No attachments have been made
+cdfm_no_attachments=No attachments yet
 cdfm_remove=Remove
 cdfm_button_bar_add_attachment_redirect=Add attachments
 cdfm_button_bar_add_attachment_more_redirect=Add more attachments
 cdfm_none=None
 cdfm_invalidMessageTitleString = Validation Error: Value is required.
-cdfm_button_bar_post_message=Post Message
+cdfm_button_bar_post_message=Post
 cdfm_button_bar_save_draft=Save Draft
 cdfm_button_bar_cancel=Cancel
 cdfm_button_bar_revise=Edit
-cdfm_button_bar_delete=Delete
+cdfm_button_bar_delete=Delete Topic
 cdfm_button_bar_add_groups_users=Add Individuals/Groups
 cdfm_button_bar_mark_as_read= Mark as Read
-cdfm_button_bar_reply_to_msg = Reply to Message
+cdfm_button_bar_reply_to_msg = Reply to This Message
 cdfm_button_bar_reply_to_topic = Reply to Topic
-cdfm_button_bar_reply_to_thread = Reply to Thread
+cdfm_button_bar_reply_to_thread = Reply to Initial Message
 cdfm_button_bar_delete_msg = Delete
 cdfm_button_bar_grade = Grade
 cdfm_button_bar_post_revised_msg = Post Edited Message
@@ -86,7 +86,7 @@ stat_forum_next_participant= Next Participant >
 stat_show_all=Show Full Text for All Authored Messages
 stat_no_authored_message=No authored messages
 stat_no_read_message=No read messages
-stat_display_in_thread=[display in thread]
+stat_display_in_thread=[display in conversation]
 stat_sort_by_topic=Sort by Topic
 stat_sort_by_date=Sort by Date
 stat_byUser=by User
@@ -140,7 +140,7 @@ cdfm_checkall=Check All
 cdfm_subject=Subject
 cdfm_authoredby=Authored By
 cdfm_date=Date
-cdfm_thread=Thread
+cdfm_thread=Conversation
 cdfm_collapse_expand_all=Expand All/Collapse All
 cdfm_label=Label
 cdfm_other_actions = Show/Hide Actions
@@ -159,8 +159,8 @@ cdfm_printer_friendly=Printer Friendly Format
 cdfm_up_level_title=Go up one level
 cdfm_next_topic=Next Topic >
 cdfm_previous_topic=< Previous Topic
-cdfm_next_thread=Next Thread >
-cdfm_previous_thread=< Previous Thread
+cdfm_next_thread=Next Conversation >
+cdfm_previous_thread=< Previous Conversation
 cdfm_full_description=Full Description 
 cdfm_read_full_description=View Full Description
 cdfm_hide_full_description=Hide Full Description
@@ -185,21 +185,21 @@ cdfm_message_permissions=Message Permissions
 cdfm_info_required_sign=*
 cdfm_forum_title=Forum Title
 cdfm_forum_posting=Forum Posting
-cdfm_forum_mark_read=Mark Threads Read
+cdfm_forum_mark_read=Mark all Messages in Conversations Read
 cdfm_forum_availability=Availability
-cdfm_forum_avail_show=Show - display immediately with no time restriction 
-cdfm_forum_avail_date=Specify Dates - begin display on (optionally) specified Beginning Date/Time; hide display after (optionally) specified Ending Date/Time
+cdfm_forum_avail_show=Show immediately 
+cdfm_forum_avail_date=Specify dates to open (show) and/or close (hide)
 cdfm_shortDescription=Short Description (255 characters max)
 cdfm_shortDescriptionCharsRem=%1 chars remain
 cdfm_fullDescription=Description
 cdfm_discussion_forum_settings=Forum Settings
 cdfm_settings_instruction=Required items marked with 
-cdfm_lock_forum=Lock Forum (Disable forum postings)
-cdfm_moderate_forum=Moderate Topics in Forum
-cdfm_moderate_forums=Moderate Topics in Forums
-cdfm_postFirst=Users must post before reading
+cdfm_lock_forum=Lock forum (disable forum postings)
+cdfm_moderate_forum=Moderate topics in forum
+cdfm_moderate_forums=Moderate topics in forums
+cdfm_postFirst=Require users to post before reading
 cdfm_postFirst_warning=You must post to this topic before you can view any messages
-cdfm_auto_mark_threads_read=Automatically Mark All Messages in a Thread as Read
+cdfm_auto_mark_threads_read=Automatically mark all messages in a conversation as read
 cdfm_button_bar_save_setting=Save
 cdfm_button_bar_save_draft=Save Draft
 cdfm_button_bar_save_setting_add_topic=Save Settings & Add Topic
@@ -239,10 +239,10 @@ cdfm_insufficient_privileges_revise_message=Insufficient privileges to revise th
 cdfm_insufficient_privileges_change_forum=Insufficient privileges to change forum settings
 cdfm_insufficient_privileges_create_topic=Insufficient privileges to create new topic
 cdfm_insufficient_privileges_new_topic=Insufficient privileges to change topic settings
-cdfm_insufficient_privileges_post_thread=Insufficient privileges to post a thread to topic {0}
+cdfm_insufficient_privileges_post_thread=Insufficient privileges to post a conversation to topic {0}
 cdfm_topic_locked=Topic {0} is locked.
 cdfm_forum_locked=Forum {0} is locked.
-cdfm_error_posting_thread=An error has occurred while posting a thread.
+cdfm_error_posting_thread=An error has occurred while posting a conversation.
 cdfm_user_not_allowed_create_forum=User is not allowed to create a new forum
 cdfm_invalid_selected_forum=Invalid forum selected
 cdfm_forum_not_found=Forum not found
@@ -284,7 +284,7 @@ cdfm_reply_deleted = The message you are attempting to reply to has been deleted
 cdfm_no_assign_for_grade = You must choose a gradebook item before you submit a grade.
 cdfm_no_points_for_grade = You must enter grade points before you submit a grade.
 cdfm_too_large_grade = Grade is larger than the maximum grade. Are you sure?
-cdfm_delete_msg = Are you sure you want to delete this message? If yes, click Delete to remove this message from the thread. 
+cdfm_delete_msg = Are you sure you want to delete this message? If yes, click Delete to remove this message from the conversation. 
 cdfm_del_msg_has_reply = The message you are attempting to delete has a reply. You may not delete this message.
 cdfm_deny_msg_has_reply = The message you are attempting to deny has a reply.  You may not deny this message.
 cdfm_add_comment_invalid = You must enter a comment.
@@ -313,7 +313,7 @@ cdfm_cancel = Cancel
 cdfm_prev_msg = < Previous Message
 cdfm_next_msg = Next Message >
 cdfm_reply_tool_bar_message= Reply to Forum Message
-cdfm_reply_thread_tool_bar_message = Reply to Forum Thread
+cdfm_reply_thread_tool_bar_message = Reply to Forum Conversation
 cdfm_reply_message_pref = Replying to:
 cdfm_reply_title=Reply Title
 cdfm_reply_to_topic = Reply to Forum Topic
@@ -347,14 +347,14 @@ perm_custom=which you can customize below:
 perm_customize=Customize
 perm_new_forum=New Forum
 perm_new_topic=New Topic
-perm_new_response=New Response
-perm_response_to_response=Response to Response
-perm_move_postings=Move Postings
-perm_moderate_postings=Moderate Postings
+perm_new_response=New Conversation
+perm_response_to_response=Reply
+perm_move_postings=Move Messages
+perm_moderate_postings=Moderate Messages
 perm_change_settings=Change Settings
 perm_post_to_gradebook=Post to Gradebook
-perm_revise_postings=Edit Postings
-perm_delete_postings=Delete Postings
+perm_revise_postings=Edit Messages
+perm_delete_postings=Delete Messages
 
 perm_read=Read
 perm_revise_any=Edit Any
@@ -395,9 +395,9 @@ msg_show_subject = Subject Only
 
 #messages organize options
 msg_organize = Organize
-msg_organize_thread = Thread
-msg_organize_date_asc = Date Ascending
-msg_organize_date_desc = Date Descending
+msg_organize_thread = by Conversation
+msg_organize_date_asc = by Date Ascending
+msg_organize_date_desc = by Date Descending
 msg_organize_unread = Unread
 
 #sorting
@@ -672,8 +672,8 @@ cdfm_button_bar_permalink_message=Copy link for pasting into email
 watch=Watch
 watch_forums_options=Watch Forums Options
 watch_forums_options_instruction=Use the settings below to change what notifications <strong><u>you</u></strong> receive when activity in the forums of <strong><u>this</u></strong> site take place.
-notify_for_all_postings=Notify me by email whenever a new message is posted
-notify_for_postings_to_my_thread=Notify me by email when a thread that I have contributed to receives a new message
+notify_for_all_postings=Send me an email whenever a new message is posted
+notify_for_postings_to_my_thread=Send me an email when a conversation that I have contributed to receives a new message
 notify_none=No notification
 
 # email notification text
