MSGCNTR-231 Ability to create Forum Topics/Forums based on groups
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@98519 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -129,6 +129,14 @@ cdfm_duplicate_forum=Duplicate Forum
 cdfm_duplicate_topic_confirm=Are you sure you wish to duplicate this topic?
 cdfm_duplicate_forum_confirm=Are you sure you wish to duplicate this forum?
 cdfm_insufficient_privileges_duplicate=You do not have privileges to duplicate this.
+cdfm_create_one_topic=Create one topic
+cdfm_autocreate_topics_header=Automatically Create Topics
+cdfm_autocreate_topics_for_groups=Automatically create multiple topics for groups
+cdfm_autocreate_topics_desc=An instance of this topic will be created for each group selected below. Permissions are configured automatically.
+cdfm_autocreate_topics_desc_more=Default permissions are based on this forum's permissions configuration.  
+cdfm_autocreate_topics_desc_roles=The {0} role(s) will automatically be set to the permission level of None.  
+cdfm_autocreate_topics_desc_groups=Each group will be set to {0} in their group''s topic and None in other automatically created topics.
+cdfm_no_group_selected=Please select at least one group to automatically create topics.
 cdfm_organize=Organize
 cdfm_statistics=Statistics & Grading
 cdfm_template_setting=Template Settings
