--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -193,7 +193,7 @@ cdfm_message_permissions=Message Permissions
 cdfm_info_required_sign=*
 cdfm_forum_title=Forum Title
 cdfm_forum_posting=Forum Posting
-cdfm_forum_mark_read=Mark all Messages in Conversations Read
+cdfm_forum_mark_read=Mark All Messages in Conversations Read
 cdfm_forum_availability=Availability
 cdfm_forum_avail_show=Show immediately 
 cdfm_forum_avail_date=Specify dates to open (show) and/or close (hide)
