--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -33,6 +33,9 @@ cdfm_button_bar_save_draft=Save Draft
 cdfm_button_bar_cancel=Cancel
 cdfm_button_bar_revise=Edit
 cdfm_button_bar_delete=Delete Topic
+cdfm_button_bar_delete_message=Delete Message
+cdfm_button_bar_delete_forum=Delete Forum
+cdfm_button_bar_delete_topic=Delete Topic
 cdfm_button_bar_add_groups_users=Add Individuals/Groups
 cdfm_button_bar_mark_as_read= Mark as Read
 cdfm_button_bar_reply_to_msg = Reply to This Message
