--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_es.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_es.properties
@@ -17,6 +17,8 @@ cdfm_empty_title_error=El t\u00EDtulo no puede estar vac\u00EDo
 cdfm_message=Mensaje
 cdfm_attachments=Anexo(s):
 cdfm_no_attachments=Sin anexos todav\u00EDa
+cdfm_no_messages=No se han publicado mensajes.
+cdfm_no_unread_messages=No hay mensajes sin leer.
 cdfm_remove=Eliminar
 cdfm_button_bar_add_attachment_redirect=A\u00F1adir anexo
 cdfm_none=Ninguno
