SAK-20720 - Update Spanish translation files
MSGCNTR incorrect translations

git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@100115 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_es.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_es.properties
@@ -15,12 +15,12 @@ cdfm_required=Los elementos obligatorios est\u00E1n marcados con
 cdfm_title=T\u00EDtulo
 cdfm_empty_title_error=El t\u00EDtulo no puede estar vac\u00EDo
 cdfm_message=Mensaje
-cdfm_attachments=Anexo(s):
-cdfm_no_attachments=Sin anexos todav\u00EDa
+cdfm_attachments=Adjunto(s):
+cdfm_no_attachments=Sin adjuntos todav\u00EDa
 cdfm_no_messages=No se han publicado mensajes.
 cdfm_no_unread_messages=No hay mensajes sin leer.
 cdfm_remove=Eliminar
-cdfm_button_bar_add_attachment_redirect=A\u00F1adir anexo
+cdfm_button_bar_add_attachment_redirect=A\u00F1adir adjunto
 cdfm_none=Ninguno
 cdfm_invalidMessageTitleString = Error de validaci\u00F3n: se requiere un valor.
 cdfm_button_bar_post_message=Enviar mensaje
@@ -334,7 +334,7 @@ pvt_date = Fecha
 pvt_authby= Creado por
 pvt_subject = Tema 
 pvt_reply = Responder al correo interno
-pvt_att= Anexos
+pvt_att= Adjuntos
 pvt_repmsg= Responder
 pvt_move = Mover a la carpeta
 pvt_delete = Borrar
@@ -357,7 +357,7 @@ pvt_compose1= Crear
 pvt_pvtcompose= Crear un correo interno
 pvt_star= *
 pvt_message= Mensaje
-pvt_noatt= Sin anexos todav\u00EDa
+pvt_noatt= Sin adjuntos todav\u00EDa
 pvt_attrem= Eliminar
 pvt_attsize= Tama\u00F1o
 pvt_atttype= Tipo
