--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -32,7 +32,7 @@ cdfm_button_bar_post_message=Post
 cdfm_button_bar_save_draft=Save Draft
 cdfm_button_bar_cancel=Cancel
 cdfm_button_bar_revise=Edit
-cdfm_button_bar_delete=Delete Topic
+cdfm_button_bar_delete=Delete
 cdfm_button_bar_delete_message=Delete Message
 cdfm_button_bar_delete_forum=Delete Forum
 cdfm_button_bar_delete_topic=Delete Topic
