MSGCNTR-635 - Update Spanish translation files with the new keys extracted from diff 2.8.x to 3.0.X
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@102532 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_es.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_es.properties
@@ -46,13 +46,29 @@ cdfm_toolbar_separator = |
 cdfm_moderator_comment_text = Comentado por
 cdfm_moderate = Moderado
 
-stat_list = Estad\u00EDsticas
+stat_list = Estad\u00EDsticas y calificaciones
+stat_byUser=por usuario
+stat_byTopic=por tema
+stat_totalMessages=Mensajes totales
 stat_name = Nombre
 stat_authored = Creado
 stat_read = Le\u00EDdo
 stat_unread = Sin leer
 stat_percent_read = Porcentaje de lectura
 stat_forum_title = T\u00EDtulo del foro
+stat_forum_word_count=Conteo de palabras
+stat_forum_comments=Comentarios
+stat_forum_na=N/D
+stat_forum_comments_hide=Ocultar comentarios
+stat_forum_comments_show=Mostrar comentarios
+stat_forum_comments_hidden=--Oculto--
+stat_forum_no_gbitem=-------
+stat_forum_submit_grades=Entregar calificaciones
+stat_forum_submit_grades_cancel=Cancelar Cambios
+stat_forum_default_grade=Aplicar calificaci\u00F3n a todos los no calificados
+stat_forum_default_grade_info=Debes entregar las calificaciones para guardar los cambios.
+stat_forum_details=Detalles
+
 stat_forum_date = Fecha
 stat_forum_subject = Asunto
 stat_sort_name = Ordenar por nombre
@@ -72,12 +88,37 @@ cdfm_discussion_forums_old=Foros de discusi\u00F3n
 cdfm_new_forum=Nuevo foro
 cdfm_new_topic=Nuevo tema
 cdfm_organize=Organizar
-cdfm_statistics=Estad\u00EDsticas
+cdfm_statistics=Estad\u00EDsticas y Calificaciones
 cdfm_template_setting=Configurar plantilla
 cdfm_default_template_settings=Configurar plantilla por defecto
 cdfm_default_template_settings_instruction=La configuraci\u00F3n de esta plantilla se aplicar\u00E1 cada vez que un nuevo foro o tema sea creado. Puede cambiar esta configuraci\u00F3n para un foro o tema espec\u00EDfico despu\u00E9s de que ha sido creado
 cdfm_default_template_organize= Organizar foros y temas
 cdfm_default_template_organize_instruction=
+cdfm_forum_inf_note=Nota:   
+cdfm_forum_inf_no_topics= Necesitas a\u00F1adir al menos un tema.
+cdfm_forum_inf_all_topics_draft=Todos los temas son borradores. Los temas guardados como borradores no pueden ser vistos por todos los participantes.
+cdfm_forum_inf_no_forums=Si no hay temas no se puede participar. Solamente t\u00FA o alguien con tu nivel de acceso puede crear temas.
+cdfm_forum_inf_init_guide=Usa <strong>Configurar foro</strong> y <strong>Configurar tema</strong> para cambiar el t\u00EDtulo y otros detalles del foro. <br />Puedes crear nuevos foros y temas t\u00FA mismo o alguien con el mismo nivel de acceso. <br />Usa <strong>Configurar plantilla</strong> para configurar una plantilla que sirva para todos los foros nuevos.
+cdfm_forum_inf_all_forums_draft=Todos los foros son borradores. Los foros guardados como borradores no pueden ser vistos por todos los participantes.
+cdfm_forum_inf_no_topic_here=Necesitas a\u00F1adir al menos un tema al foro para que est\u00E9 activo.
+cdfm_forum_inf_no_topic_create=\u00BFCrear un tema?
+cdfm_forum_inf_no_forum_create=\u00BFCrear un foro?
+cdfm_forum_inf_no_forum_access=Puede haber foros que a\u00FAn no est\u00E9n disponibles para participar. Contacte con el profesor si tiene dudas sobre el estado del foro.
+# {0} is the title of the forum or topic that is being duplicated
+cdfm_duplicate_copy_title= Duplicado de {0}  
+cdfm_duplicate_topic=Duplicar tema
+cdfm_duplicate_forum=Duplicar foro
+cdfm_duplicate_topic_confirm=\u00BFEst\u00E1s seguro que deseas duplicar este tema?
+cdfm_duplicate_forum_confirm=\u00BFEst\u00E1s seguro que deseas duplicar este foro?
+cdfm_insufficient_privileges_duplicate=No tienes privilegios para duplicar.
+cdfm_create_one_topic=Crear un tema
+cdfm_autocreate_topics_header=Crear temas autom\u00E1ticamente
+cdfm_autocreate_topics_for_groups=Crear m\u00FAltiples temas para grupos autom\u00E1ticamente
+cdfm_autocreate_topics_desc=Una copia de este tema se crear\u00E1 para cada grupo seleccionado. Los permisos se configuran autom\u00E1ticamente.
+cdfm_autocreate_topics_desc_more=Los permisos por defecto se basan en la configuraci\u00F3n de permisos para este foro.  
+cdfm_autocreate_topics_desc_roles=Los roles de {0} se van a ajustar autom\u00E1ticamente a no tener ning\u00FAn nivel de permisos.
+cdfm_autocreate_topics_desc_groups=Cada grupo se va a configurar a {0} en su tema de grupo y ninguno en los otros temas creados autom\u00E1ticamente.
+cdfm_no_group_selected=Por favor selecciona al menos un grupo para crear temas autom\u00E1ticamente.
 cdfm_checkall=Marca todos
 cdfm_subject=Tema
 cdfm_grade_msg = Calificar mensaje privado
@@ -106,13 +147,17 @@ cdfm_access=Acceso
 cdfm_contributors=Participante(s)
 cdfm_read_only_access=Acceso de solo lectura
 cdfm_permissions=Permisos
+cdfm_postFirst=Requerir a los usuarios que escriban en el tema antes de poder leer sus mensajes
+cdfm_postFirst_warning=Debes escribir primero en el tema para poder ver los mensajes
 cdfm_control_permissions=Permisos de control
 cdfm_message_permissions=Permisos de mensaje
 cdfm_info_required_sign=*
+cdfm__moremenulink=M\u00E1s
 cdfm_forum_title=T\u00EDtulo del foro
 cdfm_forum_posting=Env\u00EDos al foro
 cdfm_shortDescription=Descripci\u00F3n corta
 cdfm_fullDescription=Descripci\u00F3n
+cdfm_show_more_full_description=\u00BFM\u00E1s?
 cdfm_discussion_forum_settings=Configurar foros de discusi\u00F3n
 cdfm_settings_instruction=Los elementos obligatorios est\u00E1n marcados con
 cdfm_lock_forum=Bloquear foro (Deshabilita env\u00EDos al foro)
@@ -121,6 +166,9 @@ cdfm_moderate_forums=Moderar temas de los foros
 cdfm_button_bar_save_setting=Guardar configuraci\u00F3n
 cdfm_button_bar_save_draft=Guardar vista preliminar
 cdfm_button_bar_save_setting_add_topic=Guardar configuraci\u00F3n y a\u00F1adir tema
+cdfm_button_bar_delete_message=Borrar mensaje
+cdfm_button_bar_delete_forum=Borrar foro
+cdfm_button_bar_delete_topic=Borrar tema
 cdfm_delete_forum=\u00BFSeguro que desea borrar todos los temas y mensajes asociados con el foro?   \u00BFSeguro que desea borrar el siguiente foro y todos sus contenidos?
 cdfm_discussion_topic_settings=Configurar tema
 cdfm_topic_title=T\u00EDtulo del tema
@@ -194,6 +242,8 @@ cdfm_approve_msgs_success= Los mensajes seleccionados se han aprobado.
 cdfm_deny_msgs_success= Los mensajes seleccionados se han denegado.
 
 cdfm_reply_deleted = El mensaje que est\u00E1 intentado contestar ha sido borrado. No puede responder a este mensaje.
+cdfm_reply_message_note=Nota:
+cdfm_reply_message_mod_inst=las contribuciones a este tema son moderadas - solamente a t\u00ED y al moderador se les permite ver el mensaje hasta que sea aprobado. Si eres moderador tu mensaje se aprueba autom\u00E1ticamente.
 cdfm_no_assign_for_grade = Debe elegir una tarea ante de enviar la nota.
 cdfm_no_points_for_grade = Debe introducir los puntos de la nota antes enviar una calificaci\u00F3n.
 cdfm_delete_msg = \u00BFEst\u00E1 seguro de que desea borrar este mensaje y sus respuestas? Si es as\u00ED, haga clic en "Borrar" para eliminar permanentemente este mensaje y sus respuestas. 
@@ -235,11 +285,14 @@ cdfm_add_comment = A\u00F1adir comentario a un env\u00EDo denegado
 cdfm_add_comment_label = A\u00F1adir comentario:
 cdfm_insert_original_text_comment = Mensaje original:
 cdfm_reply_prefix=Re:
+cdfm_profile_information=Informaci\u00F3n del perfil
 
 #Permissions 
 perm_level= Nivel de permisos: 
 perm_role=Rol
 perm_role_label=Rol :
+perm_customize=Personalizar
+perm_choose_assignment_head=Calificando
 perm_new_forum=Nuevo foro
 perm_new_topic=Nuevo tema
 perm_new_response=Nueva respuesta
@@ -258,6 +311,13 @@ perm_delete_any=Borrar cualquiera
 perm_delete_own=Borrar las propias
 perm_mark_as_read=Marcar como le\u00EDdo
 perm_choose_assignment=Tarea de Calificaciones: 
+perm_choose_assignment_none_f = Se puede asociar un elemento del libro de calificaciones a este foro, pero no hay elementos en el libro de calificaciones.
+perm_choose_assignment_none_t = Se puede asociar un elemento del libro de calificaciones a este tema, pero no hay elementos en el libro de calificaciones.
+perm_choose_instruction_forum = Predeterminado en los temas de este foro.
+perm_choose_instruction_topic = Predeterminada al calificar este tema.
+perm_choose_instruction_more_link = (\u00Bfmás?)
+perm_choose_instruction_forum_more = Puede anular esta asociación en los temas hijos modificando la configuraci\u00F3n del tema.
+perm_choose_instruction_topic_more = Puede asignar un elemento del libro de calificaciones a las contribuciones en este tema. Simplemente configura el valor por defecto.
 
 perm_own=Propios
 perm_all=Todos
@@ -310,6 +370,7 @@ sort_attachment= Ordenar por adjunto
 
 
 #private messages
+pvt_anon_warning=Esta herramienta no soporta usuarios an\u00F3nimos
 pvt_message_nav=Mensajes
 pvt_received=Recibidos
 pvt_sent=Enviados
@@ -408,6 +469,12 @@ pvt_rename_folder_label = Renombar carpeta de correo interno
 pvt_yes = S\u00ED
 pvt_no = No
 pvt_reply_prefix = Re:
+pvt_bcc=Bcc
+pvt_removeBcc=Borrar Bcc
+pvt_addBcc=A\u00F1adir Bcc
+pvt_bccClear=Limpiar selecci\u00F3n
+pvt_bccUndisclosed=destinatarios-desconocidos
+
 
 pvt_alert = Alerta:
 pvt_no_match_found = No se ha encontrado ning\u00FAn resultado
@@ -557,6 +624,7 @@ perm_custom=que se pueden personalizar a continuaci\u00f3n:
 watch=Notificaciones
 watch_forums_options=Consultar Opciones del Foro
 notify_for_all_postings=Notificarme por correo cada vez que se añade un nuevo mensaje
+watch_forums_options_instruction=Usa las preferencias para cambiar las notificaciones que recibes cuando hay actividad en este foro.
 notify_for_postings_to_my_thread=Notificarme por correo cuando un hilo al que he contribuido recibe un nuevo mensaje
 notify_none=Sin notificaciones
 
@@ -621,3 +689,21 @@ cdfm_gotofirstnewtitle=Ir al primer mensaje
 cdfm_gotofirstpendingtitle=Ir al primer mensaje pendiente
 cdfm_newflagparent=Nuevos mensajes
 cdfm_newflagresponses=Nuevos mensajes
+
+#properties
+pvt_properties_desc=Configurar permisos para la herramienta de mensajes privados
+pvt_permissions=Permisos
+
+
+#group filtering:
+all_users=Todos los participantes
+filter_by_group=Filtrar por grupo
+confirm_navigation=Todas las notas que no han sido guardadas se perder\u00E1n
+
+
+#hiddenGroups:
+hiddenGroups_hiddenGroups=Grupos ocultos
+hiddenGroups_addGroup=A\u00F1adir grupo
+hiddenGroups_selectGroup=--Seleccionar grupo--
+hiddenGroups_remove=Borrar
+
