MSGCNTR-635 - Missing key cdfm_forum_noforums in Spanish translation
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/branches/msgcntr-3.0.x@102534 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_es.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_es.properties
@@ -18,6 +18,7 @@ cdfm_message=Mensaje
 cdfm_attachments=Adjunto(s):
 cdfm_no_attachments=Sin adjuntos todav\u00EDa
 cdfm_no_messages=No se han publicado mensajes.
+cdfm_forum_noforums=No hay creado ning\u00FAn foro.
 cdfm_no_unread_messages=No hay mensajes sin leer.
 cdfm_remove=Eliminar
 cdfm_button_bar_add_attachment_redirect=A\u00F1adir adjunto
