MSGCNTR-633 "in" on pending messages page is not internationalized. applied patch
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@102840 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -290,6 +290,7 @@ cdfm_no_pending_msgs=There are no pending messages to display.
 cdfm_no_message_mark_approved=No message selected to approve or deny.  Please select a message.
 cdfm_approve_msgs_success=Selected message(s) approved.
 cdfm_deny_msgs_success=Selected message(s) denied.
+cdfm_in=in 
 
 cdfm_reply_deleted = The message you are attempting to reply to has been deleted. You may not reply to this message.
 cdfm_no_assign_for_grade = You must choose a gradebook item before you submit a grade.
