MSGCNTR-635 - Update Spanish translation files with the new keys extracted from diff 2.8.x to 3.0.X
Applying translation to MSGCNTR-633

git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@103153 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_es.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_es.properties
@@ -205,6 +205,7 @@ cdfm_insufficient_privileges = Privilegios insuficientes para borrar este foro
 cdfm_insufficient_privileages_to = Privilegios insuficientes para cambiar la configuraci\u00F3n del foro
 cdfm_insufficient_privileages_to = Privilegios insuficientes para crear un nuevo tema
 cdfm_insufficient_privileges_new_topic = Privilegios insuficientes para cambiar la configuraci\u00F3n de un tema
+cdfm_in=en
 cdfm_user_not_allowed_create_forum=El usuario no puede crear un nuevo foro
 cdfm_invalid_selected_forum=Foro seleccionado no V\u00E1lido
 cdfm_forum_not_found = No se encontr\u00F3 el foro seleccionado
