MSGCNTR-641 Names of hidden students visible in forwarded email messages
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@103255 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -499,6 +499,7 @@ pvt_removeBcc=Remove Bcc
 pvt_addBcc=Add Bcc
 pvt_bccClear=Clear Selection
 pvt_bccUndisclosed=Undisclosed-Recipients
+pvt_HiddenRecipients=Undisclosed Recipients
 #reply all
 pvt_to_cc= Cc
 pvt_replyto= Replying To
