MSGCNTR-635 - Update Spanish translation files with the new keys extracted from diff 2.8.x to 3.0.X
Applying translation to MSGCNTR-641

git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@103272 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_es.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_es.properties
@@ -476,6 +476,7 @@ pvt_removeBcc=Borrar Bcc
 pvt_addBcc=A\u00F1adir Bcc
 pvt_bccClear=Limpiar selecci\u00F3n
 pvt_bccUndisclosed=destinatarios-desconocidos
+pvt_HiddenRecipients=Destinatarios desconocidos
 
 
 pvt_alert = Alerta:
