MSGCNTR-649 Messages / Settings / Purpose of 'Hidden groups' functionality isn't clear
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@104395 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -736,7 +736,7 @@ confirm_navigation=All unsaved grades will be lost
 
 
 #hiddenGroups:
-hiddenGroups_hiddenGroups=Hidden Groups
+hiddenGroups_hiddenGroups=Groups hidden in To field 
 hiddenGroups_addGroup=Add Group
 hiddenGroups_selectGroup=--Select Group--
 hiddenGroups_remove=Remove
